--- a/css/contact.css
+++ b/css/contact.css
@@ -9,10 +9,15 @@
 
 *, *::before, *::after { box-sizing: border-box; }
 
-html, body {
-  height: 100%; margin: 0; position: fixed;
+html {
+  height: 100%; margin: 0;
+}
+
+body {
+  margin: 0; width: 100%; min-height: 100%;
   font-family: var(--font-main); font-size: 16px;
   min-width: 300px; background-color: rgba(255,255,255,0.678); letter-spacing: 1.5px;
+  overflow-y: auto;
 }
 
 ::-webkit-scrollbar { width: 4px; background-color: transparent; }
